# package_templates

./: .gitignore  README.md
agentic/: cookiecutter.json
agentic/hooks/: post_gen_project.py
agentic/{{cookiecutter.package_slug}}/: SYSTEM_SPEC.md
agentic/{{cookiecutter.package_slug}}/.agent/.clinerules/: 00-global.md  10-frontend.md  20-backend.md  30-testing.md
python/: cookiecutter.json
python/{{cookiecutter.package_slug}}/: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg
python/{{cookiecutter.package_slug}}/src/{{cookiecutter.package_slug}}/: _cli.py  example.py
python/{{cookiecutter.package_slug}}/src/{{cookiecutter.package_slug}}/_data/: example.json
python/{{cookiecutter.package_slug}}/tests/: test.py
python/{{cookiecutter.package_slug}}/{{cookiecutter.package_slug}}/: __init__.py  example.py
