[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "{{cookiecutter.package_slug}}"
version = "0.1.0"
description = """{{cookiecutter.description}}"""
readme = "README.md"
requires-python = ">=3.14,<4"

authors = [
    { name = "{{cookiecutter.full_name}}", email = "{{cookiecutter.email}}" }
]

urls = { Homepage = "{{cookiecutter.package_url}}" }

classifiers = [
    "Development Status :: 1 - Planning",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]

dependencies = [
    "pydantic~=2.12",
    "universal-pathlib~=0.3",
]

[project.optional-dependencies]
dev = [
    "cruft~=2.16",
    "mypy~=1.19",
    "pre-commit~=4.5",
    "pytest~=9.0",
    "pytest-cov~=7.0",
    "pytest-mock~=3.15",
    "ruff~=0.15",
]

[project.scripts]
run-example = "{{cookiecutter.package_slug}}._cli:app"

[tool.cruft]
skip = [
    ".git/",
    "tests/",
]

[tool.mypy]
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
addopts = "--cov=stage"
testpaths = ["tests"]

[tool.ruff]

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint]
select = ["E", "F", "I", "PD"]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.package-data]
stage = ["_config/*.yaml"]

[tool.setuptools.packages.find]
where = ["src"]
