[metadata]
name = {{cookiecutter.package_slug}}
# Major.Minor.Patch[.Pre-release]
version = 0.1.0
author = {{cookiecutter.full_name}}
author_email = {{cookiecutter.email}}
description = """{{cookiecutter.description}}"""
long_description = file: README.md
long_description_content_type = text/markdown
url = {{cookiecutter.package_url}}

classifiers =
    Development Status :: 1 - Planning
    Programming Language :: Python :: 3
    Operation System :: OS Independent

[options]
packages = {{cookiecutter.package_slug}}
package_dir =
    = src
python_requires = ~=3.10
install_requires = 
    # TODO List Python package dependencies here.

# TODO Remove this section if not in use.
[options.package_data]
    {{cookiecutter.package_slug}}._data = 
        # TODO List any package data (non-Python) files here.

[options.entry_points]
console_scripts = 
    run-example = {{cookiecutter.package_slug}}._cli:run_example

[options.extras_require]
dev = 
    cruft~=2.14
    pre-commit~=2.18
    pytest~=6.2
    pytest-cov~=2.12
    pytest-mock~=3.6
    pytest-randomly~=3.8
    ruff~=0.7

[tool:pytest]
addopts = --cov
testpaths = tests
